--- a/environment.yml
+++ b/environment.yml
@@ -13,6 +13,7 @@ dependencies:
   - pydicom
   - pip
   - pip:
+      - streamlit>=1.37
       - PySide6>=6.5
       - pylibjpeg
       - pylibjpeg-libjpeg
